Workaround for WebKit flickering bug discovered and implemented. Yeahy :-)

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -36,7 +36,7 @@ body {
 
 .welcome-container {
     background-color: #000000;
-    padding-bottom: 700px;
+    padding-bottom: 300px;
     padding-top: 50px;
 }
 
@@ -49,11 +49,8 @@ body {
     &.fixed {
         position: fixed;
         top: 0;
-        right: 0;
         bottom: 0;
-        left: 0;
         height: auto !important;
-        width: auto;
     }
     background-color: @cMatteBlue;
     background-image: url("../assets/graphics/scene/world/matte/patterns/blue.jpg");
@@ -206,14 +203,6 @@ body {
         left: 0;
         position: absolute;
 
-        .dev-info {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 300px;
-            height: 100%;
-        }
-
         .skill() {
             margin: 2px;
             display: inline-block;
@@ -249,7 +238,14 @@ body {
                 padding-left: 46px;
                 color: @cMainPink;
             }
+        }
 
+        .dev-info {
+            cursor: pointer;
+            position: absolute;
+            left: 0;
+            width: 300px;
+            bottom: 0;
         }
 
         .skill-basket {
